Small addition to ourpage content.

--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
 	<title>Hello Web Dev</title>
 </head>
 <body>
-<h1>Hello Web Dev</h1>
+<h1>Hello Web Dev! It's a great course</h1>
 </body>
 </html>
